# rust

baza_nebo/: .env  .gitignore  Cargo.toml  Makefile  README.md
baza_nebo/data/: .gitignore  download.sh
baza_nebo/src/: lib.rs  main.rs
baza_nebo/src/endpoint/: feed.rs  mod.rs
ivan_back/: .env  Cargo.toml  README.md  Запрос от клиента.md
ivan_back/src/: lib.rs  main.rs
ivan_back/src/endpoint/: adv.rs  mod.rs
mirror_avito2/: .env  Cargo.toml  README.md  settings.toml
mirror_avito2/sh/: get_state.sh  mirror_avito2.sh
mirror_avito2/sql/: mirror_avito.sql  mirror_avito_date.sql
mirror_avito2/src/: avito.rs  main.rs
mirror_avito2/src/common/: mod.rs
mirror_avito2/src/pasitos/: db.rs  dip.rs  dip_check_consume.rs  dip_publish.rs  mod.rs  scan.rs  start.rs
rysev_back/: .env  Cargo.toml  README.md  settings.toml  Инструкция_от_клиента.docx  Пример_итоговой_выборки.txt
rysev_back/src/: address_parsing.rs  district_spb.rs  elastic_scan_specific.rs  main.rs
rysev_back/src/pasitos/: mod.rs
