#cargo-features = ["edition2021"]

[package]
name = "mirror_avito2"
version = "0.22.4"
# 0.22.4 - Скан api desktop - поправлена проверка последней страницы
# 0.22.3 - Поправлен парсинг даты для версии api mob
# 0.22.2 - Поправлен поиск последней открытой сессии и парсинг дат для mob версии
# 0.22.1 - Добавлено сканирование api desktop - Доработка сканирования листов с разбивкой по цене
# 0.22.0 - Добавлено сканирование api desktop - /web/1/js/items
edition = "2021"

# https://docs.rs/built/0.5.1/built/index.html
build = "build.rs"

[build-dependencies]
built = "0.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
pretty_env_logger = "0.5"
structopt = { version = "0.3" }
futures = { version = "0.3" }
openssl = { version = "0.10", features = ["vendored"] }
lazy_static = "1"
regex = "1"
strum = { version = "0.25", features = ["derive"] }
itertools = "0.10"
paste = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = [ "macros", "chrono" ] }
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "chrono",
    "json",
] }
chrono = "0.4"
common_macros2 = { path = "../common_macros2" }
pool_db = { path = "../pool_db", features = [ "pg", "settings" ] }
op_mode = { path = "../op_mode" }
arrange_millis = { path = "../arrange_millis" }
json = { path = "../json" }
config = "0.13"
thiserror = "1"
reqwest = { version = "0.11", features = ["json", "gzip", "cookies", "multipart"] }
bytes="1"
toml = "0.7"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
signal-hook = "0.3"
# chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = ["tokio-runtime"], default-features = false, branch = "main"}
# headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome" } # https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html
fantoccini = "0.19"
url = "2"
rmq = { path = "../rmq" }
http = "0.2"

[dev-dependencies]
matches = "0.1"
